2007-02-10  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-font.c: (load_cursor): if the new font path could not
	be set, revert to the old path (fixes bug #397504)

2007-02-09  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Bastien Nocera <hadess@hadess.net>

	* gnome-settings-dbus.c:
	(gnome_settings_server_media_player_key_pressed):
	* gnome-settings-dbus.h:
	* gnome-settings-multimedia-keys.c: (do_multimedia_player_action),
	(do_action), (acme_filter_events): eat media player keys if someone is
	listening on the dbus interface already (fixes bug #394313)

2007-02-05  William Jon McCann  <mccann@jhu.edu>

	* gsd-media-keys-window.c: (render_eject), (draw_eject),
	(draw_waves), (draw_speaker), (render_speaker),
	(draw_volume_boxes), (on_expose_event):
	Use #define for the alpha levels.

2007-02-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am:
	* gsd-media-keys-window.c: (load_pixbuf), (render_eject),
	(draw_eject), (draw_action_eject), (draw_waves), (draw_speaker),
	(render_speaker), (draw_volume_boxes), (draw_action_volume),
	(on_expose_event):
	* test-media-window.c: (update_state), (test_window), (main):
	Make the new volume overlay window follow the
	icon and color themes.  Add an unstalled test app. Fixes #403320

2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Paolo Borelli <pborelli@katamail.com>

	* gnome-settings-keybindings.c: (get_screens_list),
	(screen_exec_display_string), (entry_get_string),
	(bindings_get_entry), (gnome_settings_keybindings_load): plug some
	memory leaks (fixes bug #342672)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_set_mute): round volume instead of
	truncating on unmute so a simple mute/unmute doesn't lower the
	volume (fixes bug #400966)

2007-01-31  Jens Granseuer  <jensgr@gmx.net>

	* factory.c: (main): don't leak the GnomeProgram reference

2007-01-31  Jens Granseuer  <jensgr@gmx.net>
